style.css
.section-one {
  display: flex;
  flex-direction: column;
  background: #1F2937;
  margin: -10px -10px 0px -10px;
  height: 400px;
}

.header {
  display: flex;
  align-items: center;
  margin-bottom: 48px;
  justify-content: space-around;
}

.logo {
  font-size: 24px;
  color: #F9FAF8;
}  
 
ul {
  list-style-type: none;
  display: flex;
  gap: 16px;
}

a, .subtext, .action-text {
  font-size: 18px;
  color: #E5E7EB;
}

a {
  text-decoration: none;
}

.title {
  font-size: 48px;
  font-weight: 900;
  color: #F9FAF8;
}

.subsection {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin: 0 48px;
}

.left-side {
  display: flex;
  flex-flow: column wrap;
  width: 400px;
  gap: 8px;
}

button {
  padding: 8px 24px;
  background: #3882F6;
  border-radius: 8px;
  color: #E5E7EB;
  font-size: 18px;
}

.section-two {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 48px;
}

.topic {
  font-size: 36px;
  font-weight: 900;
  color: #1F2937;
  margin: 32px 0;
  align-self: center;
}

.content {
  display: flex;
  justify-content: center;
  gap: 48px;
}

.info {
  display: flex;
  flex-direction: column;
}

.info img {
  height: 200px;
  border-radius: 24px;
  border: 5px solid #3882F6;
  margin-bottom: 16px;
}

.text {
  width: 200px;
}

.section-three {
  display: flex;
  background: #E5E7EB;
  justify-content: center;
  align-items: center;
}

.container {
  display: flex;
  flex-direction: column;
  width: 750px;
  padding: 48px;
}

.quote {
  color: #1F2937;
  font-size: 36px;
  font-style: italic;
}

.name {
  font-weight: bold;
  align-self: flex-end;
}

.section-four {
  display: flex;
  margin: 0 auto;
  margin-top: 48px;
  padding: 24px 48px;
  background: #3882F6;
  border-radius: 8px;
  justify-content: space-around;
  width: 900px;
}

.action {
  font-size: 24px;
  color: #F9FAF8;
}

.footer {
  background: #1F2937;
  margin: 48px -10px -10px -10px;
  text-align: center;
  padding: 24px;
  font-size: 16px;
  color: #E5E7EB;
}

